--- a/package.json
+++ b/package.json
@@ -1,84 +1,89 @@
 {
-    "name": "humpback-validation-hook",
-    "version": "0.11.0",
-    "description": "Custom validation error messages for sails model with i18n support",
-    "main": "index.js",
-    "sails": {
-        "isHook": true
+  "name": "humpback-validation-hook",
+  "version": "0.11.1",
+  "description": "Custom validation error messages for sails model with i18n support",
+  "main": "index.js",
+  "sails": {
+    "isHook": true
+  },
+  "scripts": {
+    "pretest": "npm link && npm link humpback-validation-hook",
+    "test": "grunt test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CaliStyle/humpback-validation-hook.git"
+  },
+  "keywords": [
+    "sails",
+    "sails-hook",
+    "model",
+    "validator",
+    "validation",
+    "validate",
+    "custom",
+    "messages",
+    "define",
+    "database",
+    "exceptions",
+    "constraints",
+    "i18n",
+    "internationalization",
+    "hook",
+    "plugin",
+    "error",
+    "module"
+  ],
+  "author": {
+    "name": "scott-wyatt",
+    "email": "scott@calistyletechnologies.com",
+    "url": "https://github.com/scott-wyatt"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/CaliStyle/humpback-validation-hook/issues"
+  },
+  "homepage": "https://github.com/CaliStyle/humpback-validation-hook",
+  "contributors": [
+    {
+      "name": "scott-wyatt",
+      "github": "https://github.com/scott-wyatt"
     },
-    "scripts": {
-        "pretest": "npm link && npm link humpback-validation-hook",
-        "test": "grunt test"
+    {
+      "name": "lykmapipo",
+      "github": "https://github.com/lykmapipo"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/CaliStyle/humpback-validation-hook.git"
+    {
+      "name": "isery",
+      "github": "https://github.com/isery"
     },
-    "keywords": [
-        "sails",
-        "sails-hook",
-        "model",
-        "validator",
-        "validation",
-        "validate",
-        "custom",
-        "messages",
-        "define",
-        "database",
-        "exceptions",
-        "constraints",
-        "i18n",
-        "internationalization",
-        "hook",
-        "plugin",
-        "error",
-        "module"
-    ],
-    "author": {
-        "name": "scott-wyatt",
-        "email": "scott@calistyletechnologies.com",
-        "url": "https://github.com/scott-wyatt"
-    },
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/CaliStyle/humpback-validation-hook/issues"
-    },
-    "homepage": "https://github.com/CaliStyle/humpback-validation-hook",
-    "contributors": [{
-        "name": "scott-wyatt",
-        "github": "https://github.com/scott-wyatt"
-    }, {
-        "name": "lykmapipo",
-        "github": "https://github.com/lykmapipo"
-    }, {
-        "name": "isery",
-        "github": "https://github.com/isery"
-    }, {
-        "name": "Alaneor",
-        "github": "https://github.com/Alaneor"
-    }],
-    "dependencies": {
-        "bluebird": "^2.9.30",
-        "sails": "^0.11.0",
-        "sails-disk": "^0.10.7"
-    },
-    "devDependencies": {
-        "lodash": ">2.4.0",
-        "chai": "^2.0.0",
-        "faker": "^2.1.2",
-        "grunt": "^0.4.5",
-        "grunt-contrib-jshint": "^0.11.1",
-        "grunt-mocha-test": "^0.12.7",
-        "jshint-stylish": "^1.0.1",
-        "mocha": "^2.1.0",
-        "supertest": "^1.0.1"
-    },
-    "peerDependencies": {
-        "lodash": ">2.4.0",
-        "sails": "^0.11.0"
-    },
-    "engines": {
-        "node": ">= 0.10",
-        "npm": ">= 2.3"
+    {
+      "name": "Alaneor",
+      "github": "https://github.com/Alaneor"
     }
+  ],
+  "dependencies": {
+    "bluebird": "^2.9.30",
+    "sails": "^0.11.0",
+    "sails-disk": "^0.10.7"
+  },
+  "devDependencies": {
+    "lodash": ">2.4.0",
+    "chai": "^2.0.0",
+    "faker": "^2.1.2",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.1",
+    "grunt-mocha-test": "^0.12.7",
+    "jshint-stylish": "^1.0.1",
+    "mocha": "^2.1.0",
+    "supertest": "^1.0.1"
+  },
+  "peerDependencies": {
+    "lodash": ">2.4.0",
+    "sails": "^0.11.0"
+  },
+  "engines": {
+    "node": ">= 0.10",
+    "npm": ">= 2.3"
+  }
 }
