--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "peerDependencies": {
     "lodash": ">2.4.0",
-    "sails": "^0.11.0"
+    "sails": ">0.11.0"
   },
   "engines": {
     "node": ">= 0.10",
