--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   ],
   "dependencies": {
     "bluebird": "^2.9.30",
-    "sails": "^0.11.0",
+    "sails": ">0.11.0",
     "sails-disk": "^0.10.7",
     "waterline": "^0.12.1"
   },
